base/flux-system/webhook/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsenvrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: webhook-receiver-symbiosis-prod.behn.dev
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
      - "webhook-receiver-symbiosis-prod.behn.dev"
      secretName: webhook-receiver-symbiosis-prod-tls
